# webview-boost-app

./: CMakeLists.txt  LICENSE  README.md  build_and_run.bat  build_and_run.sh
public/: index.html  script.js  style.css
src/: main.cpp
